[gd_scene load_steps=13 format=3 uid="uid://q8gl2ha6e7d2"]

[ext_resource type="PackedScene" uid="uid://cb4e55qydhkar" path="res://character_models/fireball.blend" id="1_8o3yi"]
[ext_resource type="Script" path="res://actors/fireball.gd" id="1_qxvxs"]

[sub_resource type="Curve" id="Curve_5t75g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5uuba"]
curve = SubResource("Curve_5t75g")

[sub_resource type="Gradient" id="Gradient_foq7y"]
offsets = PackedFloat32Array(0.00520833, 1)
colors = PackedColorArray(0.85098, 0.341176, 0.388235, 1, 0.984314, 0.94902, 0.211765, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jxsmr"]
gradient = SubResource("Gradient_foq7y")

[sub_resource type="Curve" id="Curve_y6a3a"]
_data = [Vector2(0, 0), 0.0, 3.26374, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7pi67"]
curve = SubResource("Curve_y6a3a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_adnhq"]
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_7pi67")
color_ramp = SubResource("GradientTexture1D_jxsmr")
alpha_curve = SubResource("CurveTexture_5uuba")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nx8q"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_mb0yd"]
material = SubResource("StandardMaterial3D_5nx8q")
radius = 0.3
height = 0.6
radial_segments = 8
rings = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tw5sc"]
height = 1.0
radius = 0.233

[node name="Fireball" type="Area3D"]
collision_layer = 16
collision_mask = 7
script = ExtResource("1_qxvxs")

[node name="FireballModel" parent="." instance=ExtResource("1_8o3yi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Explosion" type="GPUParticles3D" parent="FireballModel"]
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_adnhq")
draw_pass_1 = SubResource("SphereMesh_mb0yd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_tw5sc")

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
